@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/salt
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/salt/ChangeLog,v 1.10 2013/03/26 00:57:09 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/salt/ChangeLog,v 1.11 2013/04/16 00:51:35 chutzpah Exp $
+
+*salt-0.14.1 (16 Apr 2013)
+
+  16 Apr 2013; Patrick McLean <chutz@gentoo.org> +salt-0.14.1.ebuild:
+  Version bump.
 
 *salt-0.14.0 (25 Mar 2013)
 
